--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
 ###> symfony/framework-bundle ###
-/app/.env.local
-/app/.env.local.php
-/app/.env.*.local
-/app/config/secrets/prod/prod.decrypt.private.php
-/app/public/bundles/
-/app/var/
-/app/vendor/
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
 ###< symfony/framework-bundle ###
