--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     volumes:
       - /var/www/html/vendor
       - /var/www/html/var
-      - ./app:/var/www/html
+      - ./:/var/www/html
   db:
     image: mariadb:latest
     volumes:
